fix for header text overflowing on smaller screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,6 @@ div,p {
 
 h1 {
   color: #000;
-  font-size: 96px;
   font-style: normal;
   font-weight: 900;
   line-height: normal;
@@ -68,7 +67,6 @@ h6 {
 
   h1 {
     color: #000;
-    font-size: 50px;
     font-style: normal;
     font-weight: 900;
     line-height: normal;
